--- a/index.css
+++ b/index.css
@@ -28,9 +28,10 @@ nav li a{
     color:  #424242;
     text-align: center;
 }
-.nav-title{
+.section-title{
     color: #131313;
-    text-align: center;
+    margin-bottom: 0;
+    
     font-size: 2.8rem;
     font-weight: 700;
     
@@ -44,12 +45,12 @@ nav li a{
 .banner-title{
     color: #131313;
     font-size: 4rem;
-    font-weight: 700;
-   
-}
-.banner-description{
+    font-weight: 700; }
+.text-light-gray{
+    font-size: 16px;
+    font-weight: 400;
     color: #727272;
-   
+    line-height: 26px;
 }
 .btn-primary{
     border-radius: 8px;
@@ -73,33 +74,17 @@ nav li a{
 /* responsive media queries */
 /* mobile divices */
 
-@media screen and (max-width: 576px) {
-    header{
-        padding: 20px;
-    }    
-    nav{
-        flex-direction: column;
-    }
-}
-/* tablete of medium devices */
-@media screen and (min-width: 577px) and (max-width:960px) {
-   header{
-     padding: 50px;
-   }
-    nav{
-        flex-direction: column;
-    }
-}
+
 /* main styles */
 main{
     max-width: 1440px;
-    margin: 0 auto;  
+    margin: 80px auto;  
 }
 
 .teams-container{
     display: flex;
     justify-content:space-around;
-    margin-top: 100px;
+
     align-items: center;
 
 }
@@ -112,12 +97,12 @@ main{
 .teams-content{
    padding-left: 70px;
    padding-right: 70px;
-   
+
 }
 
 .teams-title{
     width: 468px;
-    font-size: 3rem;
+    font-size: 2.8rem;
 }
 .sp-1{
     color:#727272;
@@ -129,10 +114,93 @@ main{
 .sp-3{
     color: #FF900E;
 }
+/* facts section */
+.facts-card-container{
+    display: flex;
+    justify-content: space-around;
+}
+.facts-card-container .card{
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 40px 30px;
+    width: 200px;
+    margin: 10px 0;
+   
+    
+}
+.facts-card-container .card-title{
+    font-weight: 600;
+    color:#727272 ;
+    font-size: 1.25rem;
+    margin-top:0;
+    
 
-.teams-description{
-    font-size: 16px;
-    font-weight: 400;
-    color: #727272;
-    line-height: 26px;
+}
+.facts-card-container .card-stats{
+    font-size: 2.8rem;
+    color: #424242;
+    margin-bottom:0;
+    margin-top: 5px;
+}
+/* sponsors styles */
+.sponsors{
+    text-align: center;
+  
+
+}
+.sponsors-icon{
+    display: flex;
+    justify-content:space-around;
+    margin-top: 50px;
+    gap: 20px;
+}
+.sponsors-icon img{
+    width: 165px;
+    height: 50px;
+  
+}
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 576px) {
+    header{
+        padding: 0;
+        
+    }    
+    nav, .teams-container, 
+    .facts-card-container,
+    .sponsors-icon{
+        flex-direction: column;
+        align-items: center;
+        
+    }
+
+    .teams-img-container{
+        grid-template-columns: 1fr;
+    }
+    .teams-content {
+        padding-left:20px;
+        padding-right:20px;
+        width: 100%;
+    }
+
+
+}
+/* tablete of medium devices */
+@media screen and (min-width: 577px) and (max-width:960px) {
+   header{
+     padding: 0;
+   }
+    nav, .teams-container,
+    
+    .sponsors-icon{
+        flex-direction: column;
+    }
 }
